--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,1 +1,11 @@
-port = 8080
+# server properties
+server.port = 8080
+
+# hibernate properties
+db.dialect = org.hibernate.dialect.H2Dialect
+db.driver = org.h2.Driver
+db.url = jdbc:h2:./h2db
+db.name = test
+db.pass = test
+db.show_sql = true
+db.hbm2ddl.auto = create
